--- a/index.html
+++ b/index.html
@@ -19,9 +19,54 @@
         <h1>Welcome to Zion Heights Hack Club!</h1>
         <p>This website will showcase the different projects we're working on, club  resources, pictures and more.</p>
         <p>Use the buttons below to jump to different sections:</p>
-        <a href="https://docs.google.com/presentation/d/1aOZnLHSXtE6UEU3QWubtJmy528NKUe_ankxB1ZnBSGw/edit?usp=sharing" target="_blank"><button>Resources</button></a>
-        <a href="https://www.w3schools.com/" target="_blank"><button >Project Showcase</button></a>
-        <a href="https://workshops.hackclub.com/personal_website/" target="_blank"><button >Pictures</button></a>
+        <a href=""><button>Resources</button></a>
+        <a href="#projects"><button >Project Showcase</button></a>
+        <a href=""><button>Pictures</button></a>
+    </div>
+    <div class="projects" id="projects">
+        <h2>Project Showcase: Boba Drops!</h2>
+        <div class="card-container">
+            <div class="card">
+                <img src="https://cloud-mlgphg2ji-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Rachel's Website</h3>
+                <p>Grade 7</p>
+                <p>My website teaches people about Ringette, my favourite sport!</p>
+                <div class="links">
+                    <a href="https://beef-389.github.io/Hack-Club/" target="_blank">View website</a>
+                    <a href="https://beef-389.github.io/Hack-Club/" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-q32gkqvjo-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Tesh's Website</h3>
+                <p>Grade 7</p>
+                <p>My website teaches people about Australian shepherds!</p>
+                <div class="links">
+                    <a href="https://teshers.github.io/TeshWebsite/" target="_blank">View website</a>
+                    <a href="https://github.com/Teshers/TeshWebsite" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-jmntmj3lq-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Faith's Website</h3>
+                <p>Grade 8</p>
+                <p>My website introduces people to my pet bird and the English Budgie breed.</p>
+                <div class="links">
+                    <a href="https://kxfaith.github.io/Website/" target="_blank">View website</a>
+                    <a href="https://github.com/KXFaith/Website" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-k5ks70vea-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Elyse's Website</h3>
+                <p>Grade 7</p>
+                <p>My website is funny and teaches you about dogs.</p>
+                <div class="links">
+                    <a href="https://elyseto.github.io/hackclub/" target="_blank">View website</a>
+                    <a href="https://github.com/ElyseTo/hackclub" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
