added all november 10 websites

--- a/index.html
+++ b/index.html
@@ -19,21 +19,22 @@
         <h1>Welcome to Zion Heights Hack Club!</h1>
         <p>This website will showcase the different projects we're working on, club  resources, pictures and more.</p>
         <p>Use the buttons below to jump to different sections:</p>
-        <a href=""><button>Resources</button></a>
+        <a href="#resources"><button>Resources</button></a>
         <a href="#projects"><button >Project Showcase</button></a>
         <a href=""><button>Pictures</button></a>
     </div>
     <div class="projects" id="projects">
         <h2>Project Showcase: Boba Drops!</h2>
+        <p>From November 7 to November 11, Zion Heights Hack Club members in grades 6 to 8 learned how to build their own websites. For many, it was their first time coding. Check out all the cool projects they created!</p>
         <div class="card-container">
             <div class="card">
-                <img src="https://cloud-mlgphg2ji-hack-club-bot.vercel.app/0image.png" alt="">
-                <h3>Rachel's Website</h3>
-                <p>Grade 7</p>
-                <p>My website teaches people about Ringette, my favourite sport!</p>
+                <img src="https://cloud-kx4hoimav-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Elisa's Website</h3>
+                <p>Grade 8</p>
+                <p>My website teaches people how to care for budgies.</p>
                 <div class="links">
-                    <a href="https://beef-389.github.io/Hack-Club/" target="_blank">View website</a>
-                    <a href="https://beef-389.github.io/Hack-Club/" target="_blank">GitHub repository</a>
+                    <a href="https://ravenclawwluna.github.io/hackclubstuff/" target="_blank">View website</a>
+                    <a href="https://github.com/RavenclawwLuna/hackclubstuff" target="_blank">GitHub repository</a>
                 </div>
             </div>
             <div class="card">
@@ -57,7 +58,17 @@
                 </div>
             </div>
             <div class="card">
-                <img src="https://cloud-k5ks70vea-hack-club-bot.vercel.app/0image.png" alt="">
+                <img src="https://cloud-mlgphg2ji-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Rachel's Website</h3>
+                <p>Grade 7</p>
+                <p>My website teaches people about Ringette, my favourite sport!</p>
+                <div class="links">
+                    <a href="https://beef-389.github.io/Hack-Club/" target="_blank">View website</a>
+                    <a href="https://beef-389.github.io/Hack-Club/" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-5pl6pehoe-hack-club-bot.vercel.app/0image.png" alt="">
                 <h3>Elyse's Website</h3>
                 <p>Grade 7</p>
                 <p>My website is funny and teaches you about dogs.</p>
@@ -66,7 +77,101 @@
                     <a href="https://github.com/ElyseTo/hackclub" target="_blank">GitHub repository</a>
                 </div>
             </div>
+            <div class="card">
+                <img src="https://cloud-6jgx27h3o-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Jeremy's Website</h3>
+                <p>Grade 7</p>
+                <p>My website includes a hint of humor, with the meta hit sensation, skibidi toilet. I wanted to make this project something, equally weird as it is funny. I hope that it gave you a laugh.</p>
+                <div class="links">
+                    <a href="https://jukeremii.github.io/Hack-Club/" target="_blank">View website</a>
+                    <a href="https://github.com/Jukeremii/Hack-Club" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-2y8xvzynu-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Chloe's Website</h3>
+                <p>Grade 8</p>
+                <p>My website helps people find cats for them to adopt.</p>
+                <div class="links">
+                    <a href="https://ascelizabeth.github.io/Kat/" target="_blank">View website</a>
+                    <a href="https://github.com/ascelizabeth/Kat" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-hyg1f5awe-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Josiah's Website</h3>
+                <p>Grade 6</p>
+                <p>The purpose of my website is teaching people about the most expensive sneakers</p>
+                <div class="links">
+                    <a href="https://oddkidlovesart.github.io/ShoeCollector-Hack-club/" target="_blank">View website</a>
+                    <a href="https://github.com/OddKidlovesart/ShoeCollector-Hack-club" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-n45i9x5iq-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Socrates's Website</h3>
+                <p>Grade 7</p>
+                <p>My website teaches people about red pandas!</p>
+                <div class="links">
+                    <a href="https://socrates-su.github.io/Socrates_Su-Personal-Website/" target="_blank">View website</a>
+                    <a href="https://github.com/Socrates-Su/Socrates_Su-Personal-Website" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-1ybr5p8tl-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Tianlang's Website</h3>
+                <p>Grade 7</p>
+                <p>My website teaches people about the solar system</p>
+                <div class="links">
+                    <a href="https://heyitstl.github.io/Hack-Club/" target="_blank">View website</a>
+                    <a href="https://github.com/heyitstl/Hack-Club/tree/main" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-ctho3z0x2-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Emma's Website</h3>
+                <p>Grade 7</p>
+                <p>My website is about cream dachshunds<br>&nbsp;</p>
+                <div class="links">
+                    <a href="https://emma-71.github.io/PersonalWebsite/" target="_blank">View website</a>
+                    <a href="https://github.com/emma-71/PersonalWebsite" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-4n9z5vbe4-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Jonathan's Website</h3>
+                <p>Grade 7</p>
+                <p>To display the things that I made or found.<br>&nbsp;</p>
+                <div class="links">
+                    <a href="https://teddy-thy-bear.github.io/teddys-box/" target="_blank">View website</a>
+                    <a href="https://github.com/teddy-thy-bear/teddys-box" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-r8jado9bc-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Claire's Website</h3>
+                <p>Grade 7</p>
+                <p>My website teaches people about all my favourite things.</p>
+                <div class="links">
+                    <a href="https://claire-27.github.io/Website27/" target="_blank">View website</a>
+                    <a href="https://github.com/Claire-27/Website27" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-7h8ahl1fh-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Yunhao's Website</h3>
+                <p>Grade 8</p>
+                <p>My website teaches people about cats.<br>&nbsp;</p>
+                <div class="links">
+                    <a href="https://baby1tooth.github.io/Website/" target="_blank">View website</a>
+                    <a href="https://github.com/baby1tooth/Website" target="_blank">GitHub repository</a>
+                </div>
+            </div>
         </div>
+    </div>
+    <div class="resources" id="resources">
+        <h2>Resources</h2>
+        <p>Here are some slideshows presentations, videos and links that we used for our Hack Club.</p>
     </div>
 </body>
 </html>
