added more projects

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
     </div>
     <div class="projects" id="projects">
         <h2>Project Showcase: Boba Drops!</h2>
-        <p>From November 7 to November 11, Zion Heights Hack Club members in grades 6 to 8 learned how to build their own websites. For many, it was their first time coding. Check out all the cool projects they created!</p>
+        <p>From November 7 to November 11, Zion Heights Hack Club members in grades 6 to 8 learned how to build their own websites. For many, it was their first time coding. Some websites have hidden easter eggs (animations). Check out all the projects they created!</p>
         <div class="card-container">
+            <!-- Grade 8 -->
             <div class="card">
                 <img src="https://cloud-kx4hoimav-hack-club-bot.vercel.app/0image.png" alt="">
                 <h3>Elisa's Website</h3>
@@ -38,13 +39,23 @@
                 </div>
             </div>
             <div class="card">
-                <img src="https://cloud-q32gkqvjo-hack-club-bot.vercel.app/0image.png" alt="">
-                <h3>Tesh's Website</h3>
-                <p>Grade 7</p>
-                <p>My website teaches people about Australian shepherds!</p>
+                <img src="https://cloud-cwi7hvrej-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Olivia's Website</h3>
+                <p>Grade 8</p>
+                <p>Learn or use recipes for dessert items, such as cookies or cakes!</p>
                 <div class="links">
-                    <a href="https://teshers.github.io/TeshWebsite/" target="_blank">View website</a>
-                    <a href="https://github.com/Teshers/TeshWebsite" target="_blank">GitHub repository</a>
+                    <a href="https://cheezospheal.github.io/website/" target="_blank">View website</a>
+                    <a href="https://github.com/cheezospheal/website" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-jle7gpdy7-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Finley's Website</h3>
+                <p>Grade 8</p>
+                <p>Introduction of myself; Contains information about me.</p>
+                <div class="links">
+                    <a href="https://darklyaverage.github.io/PersonalWebsite/" target="_blank">View website</a>
+                    <a href="https://github.com/DarklyAverage/PersonalWebsite" target="_blank">GitHub repository</a>
                 </div>
             </div>
             <div class="card">
@@ -58,6 +69,51 @@
                 </div>
             </div>
             <div class="card">
+                <img src="https://cloud-2y8xvzynu-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Chloe's Website</h3>
+                <p>Grade 8</p>
+                <p>My website helps people find cats for them to adopt.</p>
+                <div class="links">
+                    <a href="https://ascelizabeth.github.io/Kat/" target="_blank">View website</a>
+                    <a href="https://github.com/ascelizabeth/Kat" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+
+            <div class="card">
+                <img src="https://cloud-7h8ahl1fh-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Yunhao's Website</h3>
+                <p>Grade 8</p>
+                <p>My website teaches people about cats.<br>&nbsp;</p>
+                <div class="links">
+                    <a href="https://baby1tooth.github.io/Website/" target="_blank">View website</a>
+                    <a href="https://github.com/baby1tooth/Website" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+
+            <!-- <div class="card">
+                <img src="https://cloud-7h8ahl1fh-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>David's Website</h3>
+                <p>Grade 8</p>
+                <p>My website teaches people how to play tetris.</p>
+                <div class="links">
+                    <a href="https://davidxiao18.github.io/TetrisTutorial/" target="_blank">View website</a>
+                    <a href="https://github.com/DavidXiao18/TetrisTutorial/tree/main" target="_blank">GitHub repository</a>
+                </div>
+            </div> -->
+
+            <!-- <div class="card">
+                <img src="https://cloud-2n7o24uub-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Sarah's Website</h3>
+                <p>Grade 8</p>
+                <p>My website is a net of multiple gambling websites</p>
+                <div class="links">
+                    <a href="https://sophiathe2nd.github.io/Foxes/" target="_blank">View website</a>
+                    <a href="https://github.com/SophiaThe2nd/Foxes" target="_blank">GitHub repository</a>
+                </div>
+            </div> -->
+
+            <!-- Grade 7 -->
+            <div class="card">
                 <img src="https://cloud-mlgphg2ji-hack-club-bot.vercel.app/0image.png" alt="">
                 <h3>Rachel's Website</h3>
                 <p>Grade 7</p>
@@ -65,6 +121,16 @@
                 <div class="links">
                     <a href="https://beef-389.github.io/Hack-Club/" target="_blank">View website</a>
                     <a href="https://beef-389.github.io/Hack-Club/" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-q32gkqvjo-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Tesh's Website</h3>
+                <p>Grade 7</p>
+                <p>My website teaches people about Australian shepherds!</p>
+                <div class="links">
+                    <a href="https://teshers.github.io/TeshWebsite/" target="_blank">View website</a>
+                    <a href="https://github.com/Teshers/TeshWebsite" target="_blank">GitHub repository</a>
                 </div>
             </div>
             <div class="card">
@@ -85,26 +151,6 @@
                 <div class="links">
                     <a href="https://jukeremii.github.io/Hack-Club/" target="_blank">View website</a>
                     <a href="https://github.com/Jukeremii/Hack-Club" target="_blank">GitHub repository</a>
-                </div>
-            </div>
-            <div class="card">
-                <img src="https://cloud-2y8xvzynu-hack-club-bot.vercel.app/0image.png" alt="">
-                <h3>Chloe's Website</h3>
-                <p>Grade 8</p>
-                <p>My website helps people find cats for them to adopt.</p>
-                <div class="links">
-                    <a href="https://ascelizabeth.github.io/Kat/" target="_blank">View website</a>
-                    <a href="https://github.com/ascelizabeth/Kat" target="_blank">GitHub repository</a>
-                </div>
-            </div>
-            <div class="card">
-                <img src="https://cloud-hyg1f5awe-hack-club-bot.vercel.app/0image.png" alt="">
-                <h3>Josiah's Website</h3>
-                <p>Grade 6</p>
-                <p>The purpose of my website is teaching people about the most expensive sneakers</p>
-                <div class="links">
-                    <a href="https://oddkidlovesart.github.io/ShoeCollector-Hack-club/" target="_blank">View website</a>
-                    <a href="https://github.com/OddKidlovesart/ShoeCollector-Hack-club" target="_blank">GitHub repository</a>
                 </div>
             </div>
             <div class="card">
@@ -158,15 +204,68 @@
                 </div>
             </div>
             <div class="card">
-                <img src="https://cloud-7h8ahl1fh-hack-club-bot.vercel.app/0image.png" alt="">
-                <h3>Yunhao's Website</h3>
-                <p>Grade 8</p>
-                <p>My website teaches people about cats.<br>&nbsp;</p>
+                <img src="https://cloud-cawcidiu5-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Ahyoung's Website</h3>
+                <p>Grade 7</p>
+                <p>The purpose of my website is to talk about turtles.</p>
                 <div class="links">
-                    <a href="https://baby1tooth.github.io/Website/" target="_blank">View website</a>
-                    <a href="https://github.com/baby1tooth/Website" target="_blank">GitHub repository</a>
+                    <a href="https://ahyoung47.github.io/website/" target="_blank">View website</a>
+                    <a href="https://github.com/ahyoung47/website" target="_blank">GitHub repository</a>
                 </div>
             </div>
+            <div class="card">
+                <img src="https://cloud-3hq4iokjc-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Elizabeth's Website</h3>
+                <p>Grade 7</p>
+                <p>My website teaches people about Hyenas!</p>
+                <div class="links">
+                    <a href="https://lizaeu.github.io/about/" target="_blank">View website</a>
+                    <a href="https://github.com/lizaeu/about" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-2n7o24uub-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Asha's Website</h3>
+                <p>Grade 7</p>
+                <p>My website is all about bubble tea! Where it originates and facts</p>
+                <div class="links">
+                    <a href="https://ar2me.github.io/AboutmeAR/" target="_blank">View website</a>
+                    <a href="https://github.com/AR2ME/AboutmeAR/blob/main/index.html" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-nf4dc2knj-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Sophia's Website</h3>
+                <p>Grade 7</p>
+                <p>My website teaches people about foxes.</p>
+                <div class="links">
+                    <a href="https://sophiathe2nd.github.io/Foxes/" target="_blank">View website</a>
+                    <a href="https://github.com/SophiaThe2nd/Foxes" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+
+            <!-- Grade 6 -->
+            <div class="card">
+                <img src="https://cloud-hyg1f5awe-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Josiah's Website</h3>
+                <p>Grade 6</p>
+                <p>The purpose of my website is teaching people about the most expensive sneakers</p>
+                <div class="links">
+                    <a href="https://oddkidlovesart.github.io/ShoeCollector-Hack-club/" target="_blank">View website</a>
+                    <a href="https://github.com/OddKidlovesart/ShoeCollector-Hack-club" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-bc9v40hx5-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Leon's Website</h3>
+                <p>Grade 6</p>
+                <p>My website teaches about Mental Health<br>&nbsp;</p>
+                <div class="links">
+                    <a href="https://ohiodez.github.io/Coding-club/index.html" target="_blank">View website</a>
+                    <a href="https://github.com/ohioDez/Coding-club" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            
         </div>
     </div>
 
