font change, more projects

--- a/index.html
+++ b/index.html
@@ -101,17 +101,26 @@
                 </div>
             </div> -->
 
-            <!-- <div class="card">
-                <img src="https://cloud-2n7o24uub-hack-club-bot.vercel.app/0image.png" alt="">
+            <div class="card">
+                <img src="https://cloud-ond0uqmrs-hack-club-bot.vercel.app/0image.png" alt="">
                 <h3>Sarah's Website</h3>
                 <p>Grade 8</p>
                 <p>My website is a net of multiple gambling websites</p>
                 <div class="links">
-                    <a href="https://sophiathe2nd.github.io/Foxes/" target="_blank">View website</a>
-                    <a href="https://github.com/SophiaThe2nd/Foxes" target="_blank">GitHub repository</a>
+                    <a href="https://cs1sarah.github.io/Website/" target="_blank">View website</a>
+                    <a href="https://github.com/Cs1Sarah/Website" target="_blank">GitHub repository</a>
                 </div>
-            </div> -->
-
+            </div>
+            <div class="card">
+                <img src="https://cloud-rb4t0f8dg-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Daniel's Website</h3>
+                <p>Grade 8</p>
+                <p>Teaches people about raccoons<br>&nbsp;</p>
+                <div class="links">
+                    <a href="https://throwaway837.github.io/" target="_blank">View website</a>
+                    <a href="https://github.com/throwaway837/throwaway837.github.io" target="_blank">GitHub repository</a>
+                </div>
+            </div>
             <!-- Grade 7 -->
             <div class="card">
                 <img src="https://cloud-mlgphg2ji-hack-club-bot.vercel.app/0image.png" alt="">
@@ -124,7 +133,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="https://cloud-q32gkqvjo-hack-club-bot.vercel.app/0image.png" alt="">
+                <img src="https://cloud-kjz3g0jwb-hack-club-bot.vercel.app/0image.png" alt="">
                 <h3>Tesh's Website</h3>
                 <p>Grade 7</p>
                 <p>My website teaches people about Australian shepherds!</p>
@@ -134,7 +143,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="https://cloud-5pl6pehoe-hack-club-bot.vercel.app/0image.png" alt="">
+                <img src="https://cloud-cu9gme2mi-hack-club-bot.vercel.app/0image.png" alt="">
                 <h3>Elyse's Website</h3>
                 <p>Grade 7</p>
                 <p>My website is funny and teaches you about dogs.</p>
@@ -144,7 +153,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="https://cloud-6jgx27h3o-hack-club-bot.vercel.app/0image.png" alt="">
+                <img src="https://cloud-5grd9uob1-hack-club-bot.vercel.app/0image.png" alt="">
                 <h3>Jeremy's Website</h3>
                 <p>Grade 7</p>
                 <p>My website includes a hint of humor, with the meta hit sensation, skibidi toilet. I wanted to make this project something, equally weird as it is funny. I hope that it gave you a laugh.</p>
@@ -157,7 +166,7 @@
                 <img src="https://cloud-n45i9x5iq-hack-club-bot.vercel.app/0image.png" alt="">
                 <h3>Socrates's Website</h3>
                 <p>Grade 7</p>
-                <p>My website teaches people about red pandas!</p>
+                <p>My website teaches people about red pandas!<br>&nbsp;</p>
                 <div class="links">
                     <a href="https://socrates-su.github.io/Socrates_Su-Personal-Website/" target="_blank">View website</a>
                     <a href="https://github.com/Socrates-Su/Socrates_Su-Personal-Website" target="_blank">GitHub repository</a>
@@ -184,7 +193,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="https://cloud-4n9z5vbe4-hack-club-bot.vercel.app/0image.png" alt="">
+                <img src="https://cloud-gskz2j7o7-hack-club-bot.vercel.app/0image.png" alt="">
                 <h3>Jonathan's Website</h3>
                 <p>Grade 7</p>
                 <p>To display the things that I made or found.<br>&nbsp;</p>
@@ -217,7 +226,7 @@
                 <img src="https://cloud-3hq4iokjc-hack-club-bot.vercel.app/0image.png" alt="">
                 <h3>Elizabeth's Website</h3>
                 <p>Grade 7</p>
-                <p>My website teaches people about Hyenas!</p>
+                <p>My website teaches people about Hyenas!<br>&nbsp;</p>
                 <div class="links">
                     <a href="https://lizaeu.github.io/about/" target="_blank">View website</a>
                     <a href="https://github.com/lizaeu/about" target="_blank">GitHub repository</a>
@@ -237,7 +246,17 @@
                 <img src="https://cloud-nf4dc2knj-hack-club-bot.vercel.app/0image.png" alt="">
                 <h3>Sophia's Website</h3>
                 <p>Grade 7</p>
-                <p>My website teaches people about foxes.</p>
+                <p>My website teaches people about foxes.<br>&nbsp;</p>
+                <div class="links">
+                    <a href="https://sophiathe2nd.github.io/Foxes/" target="_blank">View website</a>
+                    <a href="https://github.com/SophiaThe2nd/Foxes" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-82pet8jbk-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Cristian's Website</h3>
+                <p>Grade 7</p>
+                <p>I want to show off my website making skills for having a responsive website.</p>
                 <div class="links">
                     <a href="https://sophiathe2nd.github.io/Foxes/" target="_blank">View website</a>
                     <a href="https://github.com/SophiaThe2nd/Foxes" target="_blank">GitHub repository</a>
