--- a/index.html
+++ b/index.html
@@ -121,6 +121,16 @@
                     <a href="https://github.com/throwaway837/throwaway837.github.io" target="_blank">GitHub repository</a>
                 </div>
             </div>
+            <div class="card">
+                <img src="https://cloud-qafkaqm9j-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Yunseo's Website</h3>
+                <p>Grade 8</p>
+                <p>My website welcomes people to join Uha soup world and become an Uharians</p>
+                <div class="links">
+                    <a href="https://yuu-1119.github.io/Yunseo/" target="_blank">View website</a>
+                    <a href="https://github.com/Yuu-1119/Yunseo" target="_blank">GitHub repository</a>
+                </div>
+            </div>
             <!-- Grade 7 -->
             <div class="card">
                 <img src="https://cloud-mlgphg2ji-hack-club-bot.vercel.app/0image.png" alt="">
@@ -260,6 +270,26 @@
                 <div class="links">
                     <a href="https://sophiathe2nd.github.io/Foxes/" target="_blank">View website</a>
                     <a href="https://github.com/SophiaThe2nd/Foxes" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-1wydc9ijr-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Janelle's Website</h3>
+                <p>Grade 7</p>
+                <p>My website is about frogs<br>&nbsp;</p>
+                <div class="links">
+                    <a href="https://jau3lle.github.io/Hack-Cllub/" target="_blank">View website</a>
+                    <a href="https://github.com/Jau3lle/Hack-Cllub" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-m0l8yx668-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Emma's Website</h3>
+                <p>Grade 7</p>
+                <p>My website is about Brown Bears<br>&nbsp;</p>
+                <div class="links">
+                    <a href="https://1n-sane.github.io/case143/" target="_blank">View website</a>
+                    <a href="https://github.com/1n-sane/case143" target="_blank">GitHub repository</a>
                 </div>
             </div>
 
