--- a/index.html
+++ b/index.html
@@ -292,7 +292,16 @@
                     <a href="https://github.com/1n-sane/case143" target="_blank">GitHub repository</a>
                 </div>
             </div>
-
+            <div class="card">
+                <img src="https://cloud-96io0uq32-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Ji's Website</h3>
+                <p>Grade 7</p>
+                <p>My website is Bubble Tea (Boba)<br>&nbsp;</p>
+                <div class="links">
+                    <a href="https://kimchi-potato.github.io/kimchi/" target="_blank">View website</a>
+                    <a href="https://github.com/kimchi-potato/kimchi" target="_blank">GitHub repository</a>
+                </div>
+            </div>
             <!-- Grade 6 -->
             <div class="card">
                 <img src="https://cloud-hyg1f5awe-hack-club-bot.vercel.app/0image.png" alt="">
