--- a/index.html
+++ b/index.html
@@ -131,6 +131,17 @@
                     <a href="https://github.com/Yuu-1119/Yunseo" target="_blank">GitHub repository</a>
                 </div>
             </div>
+            <div class="card">
+                <img src="https://cloud-5v5qjt9rs-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Ades' Website</h3>
+                <p>Grade 8</p>
+                <p>My website wants to teach people about Ades (me)</p>
+                <div class="links">
+                    <a href="https://iiioff.github.io/CodingClubWebsite/" target="_blank">View website</a>
+                    <a href="https://github.com/iiioff/CodingClubWebsite" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+
             <!-- Grade 7 -->
             <div class="card">
                 <img src="https://cloud-mlgphg2ji-hack-club-bot.vercel.app/0image.png" alt="">
@@ -296,10 +307,20 @@
                 <img src="https://cloud-96io0uq32-hack-club-bot.vercel.app/0image.png" alt="">
                 <h3>Ji's Website</h3>
                 <p>Grade 7</p>
-                <p>My website is Bubble Tea (Boba)<br>&nbsp;</p>
+                <p>My website is about Bubble Tea (Boba)<br>&nbsp;</p>
                 <div class="links">
                     <a href="https://kimchi-potato.github.io/kimchi/" target="_blank">View website</a>
                     <a href="https://github.com/kimchi-potato/kimchi" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-5m2flekj7-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Christina's Website</h3>
+                <p>Grade 7</p>
+                <p>My website teaches people about bunnies<br>&nbsp;</p>
+                <div class="links">
+                    <a href="https://yu-ria5.github.io/Hack-Club/" target="_blank">View website</a>
+                    <a href="https://github.com/yu-ria5/Hack-Club" target="_blank">GitHub repository</a>
                 </div>
             </div>
             <!-- Grade 6 -->
