sticky is working

--- a/index.html
+++ b/index.html
@@ -13,17 +13,19 @@
         <li><a href="contact.asp">Contact</a></li>
         <li><a href="about.asp">About</a></li>
       </ul> -->
-    <div class="hero">
+    <div class="hero" id="hero">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcToyTJsFolis8i2iKC1JspBSmR8Av-JP3H-JA&s" alt="">
         <img src="https://hackclub.com/stickers/orphmoji_yippee.png" alt="" id="dino">
         <h1>Welcome to Zion Heights Hack Club!</h1>
         <p>This website will showcase the different projects we're working on, club resources, pictures and more.</p>
         <p>Use the buttons below to jump to different sections:</p>
-        <div class="sticky">
-            <a href="#resources"><button>Resources</button></a>
-            <a href="#projects"><button>Project Showcase</button></a>
-            <a href="#pictures"><button>Pictures</button></a>
-        </div>
+        
+    </div>
+    <div class="sticky">
+        <a href="#hero"><button>Home</button></a>
+        <a href="#projects"><button>Project Showcase</button></a>
+        <a href="#pictures"><button>Pictures</button></a>
+        <a href="#resources"><button>Resources</button></a>
     </div>
     <div class="projects" id="projects">
         <h2>Project Showcase: Boba Drops!</h2>
