--- a/index.html
+++ b/index.html
@@ -327,6 +327,27 @@
                     <a href="https://github.com/yu-ria5/Hack-Club" target="_blank">GitHub repository</a>
                 </div>
             </div>
+            <div class="card">
+                <img src="https://cloud-epvda7uv8-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Brayden's Website</h3>
+                <p>Grade 7</p>
+                <p>My website educates people about myself<br>&nbsp;</p>
+                <div class="links">
+                    <a href="https://bl3chan.github.io/My-Website/" target="_blank">View website</a>
+                    <a href="https://github.com/BL3chan/My-Website/" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+            <div class="card">
+                <img src="https://cloud-8jt65vw7c-hack-club-bot.vercel.app/0image.png" alt="">
+                <h3>Huaiyuan's Website</h3>
+                <p>Grade 7</p>
+                <p>My website talks about parakeets aka budgies aka small birds</p>
+                <div class="links">
+                    <a href="https://dragonrazor.github.io/hac-club/" target="_blank">View website</a>
+                    <a href="https://github.com/Dragonrazor/hac-club" target="_blank">GitHub repository</a>
+                </div>
+            </div>
+
             <!-- Grade 6 -->
             <div class="card">
                 <img src="https://cloud-hyg1f5awe-hack-club-bot.vercel.app/0image.png" alt="">
