added cristian links

--- a/index.html
+++ b/index.html
@@ -283,8 +283,8 @@
                 <p>Grade 7</p>
                 <p>I want to show off my website making skills for having a responsive website.</p>
                 <div class="links">
-                    <a href="https://sophiathe2nd.github.io/Foxes/" target="_blank">View website</a>
-                    <a href="https://github.com/SophiaThe2nd/Foxes" target="_blank">GitHub repository</a>
+                    <a href="https://cristydacodergod.github.io/MyCoolWebsite/" target="_blank">View website</a>
+                    <a href="https://github.com/CristyDaCoderGod/MyCoolWebsite" target="_blank">GitHub repository</a>
                 </div>
             </div>
             <div class="card">
